src/objects/Line_item__c.object
<CustomObject>
    <fields>
        <fullName>Commerce_line_item_ID__c</fullName>
        <description>Drupal ID for the commerce line item</description>
        <externalId>true</externalId>
        <inlineHelpText>Drupal ID for the commerce line item</inlineHelpText>
        <label>Commerce line item ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Donation__c</fullName>
        <description>Donation transaction which contained this line item</description>
        <inlineHelpText>Donation transaction which contained this line item</inlineHelpText>
        <label>Donation</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <description>Price of one of these items</description>
        <inlineHelpText>Price of one of these items</inlineHelpText>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Number of this item purchased</description>
        <inlineHelpText>Number of this item purchased</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Line Item</label>
    <nameField>
        <label>Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>